<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_hub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musiqueue.Activities.hub_admin_only.CreateHub"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_a_hub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/create_hub"
        android:textSize="32sp"
        android:background="@drawable/double_end_container"
        android:padding="20dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:id="@+id/name_and_pin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/getting_started_container"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="30dp"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/transparent"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/hub_name"
                android:textSize="24sp"
                android:background="@android:color/transparent" />

            <EditText
                android:id="@+id/hub_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="60dp"
                android:background="@color/white"
                android:hint="@string/name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/pass_pin"
                android:textSize="24sp"
                android:background="@android:color/transparent" />

            <EditText
                android:id="@+id/pass_pin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:hint="@string/four_digit_pass_pin"
                android:inputType="numberPassword"
                tools:ignore="TextFields" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create_hub_button"
        android:textSize="20sp"
        android:background="@drawable/gray_bubble_button"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp" />
</LinearLayout>
