<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_bar_hubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C4C2C1"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/hub_name_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/hub_name"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <Button
            android:id="@+id/hub_name_search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/search"
            android:onClick="search" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hubs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar_hubs"
        android:background="@drawable/getting_started_container"></android.support.v7.widget.RecyclerView>
</LinearLayout>