<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.musiqueue.Activities.hub_admin_only.QueueActivity">


    <fragment
        android:id="@+id/youtube_player"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:id="@+id/queuedSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="3dp" />

    <ToggleButton
        android:id="@+id/q_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-5dp"
        android:weightSum="7">

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="Search For Song" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="searchVideo"
            android:text="Search Song"
            android:background="@drawable/blue_bubble_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-10dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/songList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ListView
        android:id="@+id/videos_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="5dp"
        android:visibility="gone" />

</LinearLayout>
